--- a/HTML/index.html
+++ b/HTML/index.html
@@ -34,6 +34,7 @@
                 </select>
             </div>
         </nav>
+
         <!-- Main Content -->
         <div class="main-content">
             <!-- Sidebar -->
@@ -44,6 +45,7 @@
                         <span>Neuer Termin</span>
                     </button>
                 </div>
+
                 <!-- Neue Statistik-Sektion -->
                 <div class="stats-section">
                     <h3>Übersicht</h3>
@@ -62,6 +64,7 @@
                         </div>
                     </div>
                 </div>
+
                 <!-- To-Do Liste -->
                 <div class="todo-section">
                     <h3>To-Do Liste</h3>
@@ -75,6 +78,7 @@
                         <!-- Wird durch JS gefüllt -->
                     </div>
                 </div>
+
                 <!-- Termin-Kategorien -->
                 <div class="calendars-list">
                     <h3>Kategorien</h3>
@@ -108,7 +112,9 @@
                         <!-- Benutzerdefinierte Kategorien werden hier eingefügt -->
                     </ul>
                 </div>
+
             </aside>
+
             <!-- Calendar Grid -->
             <main class="calendar-grid">
                 <!-- Time Column -->
@@ -122,6 +128,7 @@
             </main>
         </div>
     </div>
+
     <!-- Event Creation Modal -->
     <div class="modal fade" id="eventModal" tabindex="-1">
         <div class="modal-dialog">
@@ -184,3 +191,8 @@
             </div>
         </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="js/calendar.js"></script>
+</body>
+</html> 
