--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -208,6 +208,8 @@
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Abbrechen</button>
                             <button type="submit" form="event-form" class="btn btn-primary">Speichern</button>
+                            <button type="button" id="delete-event" class="btn btn-danger">Löschen</button>
+                            <button type="submit" form="event-form" class="btn btn-primary">Speichern</button>
                         </div>
                     </div>
                 </div>
