--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -188,8 +188,8 @@
                 </div>
             </div>
 
-            <!-- Event Modal -->
-            <div class="modal fade" id="event-modal" tabindex="-1" aria-labelledby="event-modal-title" aria-hidden="true">
+                        <!-- Event Modal -->
+            <div class="modal fade" id="event-modal" tabindex="-1" aria-labelledby="event-modal-title" style="display: none;">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
@@ -223,13 +223,12 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Abbrechen</button>
-                            <button type="button" id="delete-event" class="btn btn-danger">Löschen</button>
+                            <button type="button" id="delete-event" class="btn btn-danger d-none">Löschen</button>
                             <button type="submit" form="event-form" class="btn btn-primary">Speichern</button>
                         </div>
                     </div>
                 </div>
             </div>
-
             <!-- Toast Container for Notifications -->
             <div class="toast-container position-fixed bottom-0 end-0 p-3">
                 <!-- Toasts will be added here dynamically -->
