projekt fast fertig nur noch kleine buggs

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -154,7 +154,7 @@
                                     </div>
                                 </form>
                                 <ul id="todo-list" class="list-group">
-                                    <!-- Todos will be added here dynamically -->
+                                    <!-- Tdos will be added here dynamically -->
                                 </ul>
                             </div>
                         </div>
@@ -189,7 +189,7 @@
             </div>
 
                         <!-- Event Modal -->
-            <div class="modal fade" id="event-modal" tabindex="-1" aria-labelledby="event-modal-title" style="display: none;">
+                <div class="modal fade" id="event-modal" tabindex="-1" aria-labelledby="event-modal-title" style="display: none;">
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
